# profile-page

./: docker-compose.yml  package-lock.json  package.json
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 53c797540dce_create_profile_table.py  a1b2c3d4e5f6_add_socials_to_profile.py
backend/app/: main.py
backend/app/api/dependencies/: admin_auth.py
backend/app/api/routes/: admin_profile.py  profile.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: profile.py
backend/app/schemas/: profile.py
backend/app/services/: profile_service.py
backend/profile_page_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: App.css  App.tsx  index.css  main.tsx
src/components/about/: About.tsx
src/components/motion/: ScrollReveal.tsx
src/hooks/: useProfile.ts  useScrollReveal.ts
src/lib/api/: experience.ts  profile.ts  projects.ts
