[project]
name = "profile-page-backend"
version = "0.1.0"
description = "FastAPI backend for the portfolio profile page"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "pydantic-settings>=2.7,<3",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8,<9",
    "pytest-asyncio>=0.25,<1",
]
