[project]
name = "profile-page-backend"
version = "0.1.0"
description = "FastAPI backend for the portfolio profile page"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "pydantic-settings>=2.7,<3",
    "python-dotenv>=1.0,<2",
    "sqlalchemy>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "greenlet>=3.3,<4",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8,<9",
    "pytest-asyncio>=0.25,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]
